# retro-toy-station

./: .clang-format  .coderabbit.yaml  .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  a.txt  analysis_options.yaml  codecov.yml  pubspec.yaml  rebuild.sh  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_cmake.yaml  cache_cleanup.yaml  code_analysis_check.yaml  code_style_check.yaml  codeql.yaml  docs.yaml  pr_author_auto_assign.yaml  pr_title_lint.yaml  pull_request.yaml  push.yaml
.sonarlint/: connectedMode.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/retro_toy_station/: MainActivity.kt
cmake/: ConfigureCompiler.cmake  ConfigureEngine.cmake  ConsoleApplication.cmake  FindDevkitPro.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/awesome_css/: header.html
docs/codestyle/: DOXYGEN_CLASS_TEMPLATE.md  DOXYGEN_STYLE_GUIDE.md  code_style.md
include/: app.hpp  math.hpp
include/app/: version.hpp  version.inl
include/core/: base_string.hpp  base_string.inl  c_string_view.hpp  c_string_view.inl  callbacks_pool.hpp  callbacks_pool.inl  constexpr_utils.hpp  constexpr_utils.inl  fixed_string.hpp  fixed_string.inl  fixed_vector.hpp  fixed_vector.inl  hashes.hpp  utils.hpp  utils.inl
include/math/: point.hpp  point.inl  vector2d.hpp  vector2d.inl
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: runner.dart
lib/modules/app/hms_gms_availability/: hms_gms_availability.dart  hms_gms_availability_io.dart  hms_gms_availability_web.dart
lib/modules/core/domain/: app_platform.dart  package_info_repository.dart  package_info_utils.dart
lib/modules/core/domain/models/: app_info.dart  app_info.freezed.dart
lib/modules/core/environment/: environment.dart
lib/modules/core/environment/models/: config.dart  config.freezed.dart  debug_options.dart  debug_options.freezed.dart
lib/modules/core/services/: app_platform_service.dart  logger_mixin.dart  shared_preferences_helper.dart
lib/modules/ui_kit/theme/: theme_utils.dart
lib/modules/ui_kit/theme/models/: dynamic_color.dart  theme_style.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: main.rs
src/app/: mod.rs  retro_toy_station_app.rs
src/core/: core.hpp.in  hashes.cpp  utils.cpp  utils_internal.inl
test/: CMakeLists.txt  flutter_test_config.dart  tests.cpp  widget_test.dart
test/app/: version.test.cpp
test/core/: c_string_view.test.cpp  callbacks_pool.test.cpp  constexpr_utils.test.cpp  fixed_string.test.cpp  fixed_vector.test.cpp  hashes.test.cpp  utils.test.cpp
test/math/: point.test.cpp  vector2d.test.cpp
test/mocks/: shared_preferences_async_mock.dart  shared_preferences_helper_mock.dart
test/modules/core/domain/: package_info_repository_test.dart  package_info_utils_test.dart
test/modules/core/environment/: environment_test.dart
test/modules/core/services/: app_platform_service_test.dart  logger_mixin_test.dart  shared_preferences_helper_test.dart
tools/builder/: check_code_format.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
