#-------------------------------------------------------------------------------------------
# Copyright (c) 2025 Toyman Interactive
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this
# software and associated documentation files (the "Software"), to deal in the Software
# without restriction, including without limitation the rights to use, copy, modify, merge,
# publish, distribute, sublicense, and / or sell copies of the Software, and to permit
# persons to whom the Software is furnished to do so, subject to the following conditions :
#
# The above copyright notice and this permission notice shall be included in all copies or
# substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
# PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
# FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
# OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.
#-------------------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.31.0 FATAL_ERROR)

project(ToyGine2 LANGUAGES CXX VERSION 25.11.0 HOMEPAGE_URL https://github.com/ToymanInteractive/toygine2)

set(TOYGINE_LIBRARY_NAME toygine)
set(TOYGINE_SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

# Is top level project
set(TOP_PROJECT OFF)
if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(TOP_PROJECT ON)
endif (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)

# To distinguish between debug and release builds
set(CMAKE_DEBUG_POSTFIX "d")
set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")

# Disable regeneration of build system files by IDEs
set(CMAKE_SUPPRESS_REGENERATION TRUE)

# Enable projects folders
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

#-------------------------------------------------------------------------------------------
# User-provided options
#-------------------------------------------------------------------------------------------

# Setup configuration types
set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "" FORCE)

# Make default 'RelWithDebInfo' build
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif (NOT CMAKE_BUILD_TYPE)

if (TOP_PROJECT)
  include(CMakeDependentOption)

  option(TOYGINE_BUILD_DOCS "Set when you want to build engine documentation" OFF)
  option(TOYGINE_BUILD_TESTS "Set when you want to build engine unit tests" ON)
  cmake_dependent_option(TOYGINE_TESTS_ENABLE_COVERAGE "Enable code coverage instrumentation for tests" OFF "TOYGINE_BUILD_TESTS" OFF)
endif (TOP_PROJECT)

#-------------------------------------------------------------------------------------------
# Compile and linking options
#-------------------------------------------------------------------------------------------

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(ConfigureEngine)
include(ConfigureCompiler)

if (TOYGINE_TARGET_PLATFORM STREQUAL "Windows Desktop")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/windows/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/windows/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "Linux Desktop")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/linux/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/linux/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "macOS Desktop")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/macos/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/macos/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "Nintendo Game Boy Advance")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/gba/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/gba/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "Nintendo DS")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/nds/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/nds/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "Nintendo 3DS")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/3ds/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/3ds/platform_config.hpp)
elseif (TOYGINE_TARGET_PLATFORM STREQUAL "Nintendo Switch")
  include(${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/switch/CMakeLists.txt)
  set(TOYGINE_TARGET_PLATFORM_CONFIG_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src/platforms/switch/platform_config.hpp)
else ()
  message(FATAL_ERROR "Unsupported TOYGINE_TARGET_PLATFORM: ${TOYGINE_TARGET_PLATFORM}")
endif ()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/core/core.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/include/core.hpp @ONLY)

# Enable and copy compile commands file in fixed space for static analysis tools
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
execute_process(
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
  ${CMAKE_BINARY_DIR}/compile_commands.json
  ${CMAKE_BINARY_DIR}/../compile_commands.json
)

#-------------------------------------------------------------------------------------------

set(SRC_CORE_LIST                                                                                                                                                                              src/core/hashes.cpp     src/core/utils.cpp     src/core/utils_internal.inl)
set(HDR_CORE_LIST include/core.hpp include/core/c_string_view.hpp include/core/callbacks_pool.hpp include/core/constexpr_utils.hpp include/core/fixed_string.hpp include/core/fixed_vector.hpp include/core/hashes.hpp include/core/utils.hpp)
set(INL_CORE_LIST                  include/core/c_string_view.inl include/core/callbacks_pool.inl include/core/constexpr_utils.inl include/core/fixed_string.inl include/core/fixed_vector.inl                         include/core/utils.inl)

set(SRC_APP_LIST )
set(HDR_APP_LIST include/app.hpp include/app/version.hpp)
set(INL_APP_LIST                 include/app/version.inl)

set(SRC_MATH_LIST)
set(HDR_MATH_LIST include/math.hpp include/math/point.hpp include/math/vector2d.hpp)
set(INL_MATH_LIST                  include/math/point.inl include/math/vector2d.inl)

source_group("Core" FILES ${SRC_CORE_LIST} ${HDR_CORE_LIST} ${INL_CORE_LIST})
source_group("App"  FILES ${SRC_APP_LIST}  ${HDR_APP_LIST}  ${INL_APP_LIST})
source_group("Math" FILES ${SRC_MATH_LIST} ${HDR_MATH_LIST} ${INL_MATH_LIST})

#-------------------------------------------------------------------------------------------

list(APPEND SRC_LIST ${SRC_CORE_LIST} ${SRC_APP_LIST} ${SRC_MATH_LIST})
list(APPEND HDR_LIST ${HDR_CORE_LIST} ${HDR_APP_LIST} ${HDR_MATH_LIST})
list(APPEND INL_LIST ${INL_CORE_LIST} ${INL_APP_LIST} ${INL_MATH_LIST})
set(LIB_LIST ${LIB_LIST})

add_library(${TOYGINE_LIBRARY_NAME} STATIC ${SRC_LIST} ${HDR_LIST} ${INL_LIST})

target_include_directories(${TOYGINE_LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

if (PREPROCESSOR_DEFINITIONS)
  target_compile_definitions(${TOYGINE_LIBRARY_NAME} PRIVATE ${PREPROCESSOR_DEFINITIONS})
endif (PREPROCESSOR_DEFINITIONS)

target_link_libraries(${TOYGINE_LIBRARY_NAME} ${LIB_LIST})

#-------------------------------------------------------------------------------------------
# Unit tests
#-------------------------------------------------------------------------------------------

if (TOYGINE_BUILD_TESTS)
  enable_testing()
  add_subdirectory(test)
endif (TOYGINE_BUILD_TESTS)

#-------------------------------------------------------------------------------------------
# Documentation
#-------------------------------------------------------------------------------------------

if (TOYGINE_BUILD_DOCS)
  add_subdirectory(docs)
endif (TOYGINE_BUILD_DOCS)
